[package]
name = "hemm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
confy = "0.5.1"
crossterm = "0.26.1"
ctrlc = "3.2.5"
tui = "0.19.0"
# tui-textarea = "0.2.0"
# FIXME: Fix crate once text wrap feat is merged
tui-textarea = { git = "https://github.com/brooksvb/tui-textarea_text-wrap.git", branch = "main" }

[[bin]]
name = "hemm"
path = "src/main.rs"
