[package]
name = "hemm"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
confy = "0.5.1"
crossterm = "0.26.1"
ctrlc = "3.2.5"
porsmo = "0.1.3"
tui = "0.19.0"
tui-textarea = "0.2.0"

[[bin]]
name = "hemm"
path = "src/main.rs"

[patch.crates-io]
# FIXME: Remove patch once text wrap feat is merged
tui-textarea = { git = "https://github.com/brooksvb/tui-textarea_text-wrap.git", branch = "main" }
